--- a/index/exercicios/exercicio08/style.css
+++ b/index/exercicios/exercicio08/style.css
@@ -8,7 +8,11 @@ body {
   margin-top: 60px;
 }
 
-
+header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
+}
 
 img {
   max-width: 100%;
@@ -24,7 +28,7 @@ p, h1, h2, h3 {
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.5rem;
   line-height: 1.3;
 }
 
@@ -34,12 +38,20 @@ flex-wrap: wrap;
 gap: 20px;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .menu a {
   background-color: white;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 4px;
   color: black;
   text-transform: uppercase;
+  display: block;
+  
 }
 
 .conteudo {
@@ -67,6 +79,9 @@ gap: 20px;
   text-transform: uppercase;
 }
 
+.introducao h1 {
+  font-size: 2rem;
+}
 .detalhe {
   width: 60px;
   height: 4px;
