--- a/index/exercicios/exercicio08/style.css
+++ b/index/exercicios/exercicio08/style.css
@@ -105,7 +105,7 @@ ul {
 
 .botao {
   background: var(--cor-primaria);
-  color: #fffff;
+  color: #ffffff;
   padding: 1rem 2rem;
   border-radius: 4px;
   text-transform: uppercase;
