--- a/index/exercicios/exercicioJS copy/style.css
+++ b/index/exercicios/exercicioJS copy/style.css
@@ -1,13 +1,5 @@
-.meu-botao {
-
-padding: 10px 20px;
-background-color: aqua;
-color: black;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-}
-
-.meu-botao:hover {
-  background-color: rgb(11, 204, 204);
+a {
+  text-decoration: none;
+  color: black;
+  text-transform: uppercase;
 }
