--- a/Javascript-Curso/parte 1/parte1/nav-tab/style.css
+++ b/Javascript-Curso/parte 1/parte1/nav-tab/style.css
@@ -1,4 +1,12 @@
-body, h1, h2, ul, li, p, dd, dt, dl {
+body,
+h1,
+h2,
+ul,
+li,
+p,
+dd,
+dt,
+dl {
   margin: 0px;
   padding: 0px;
 }
@@ -28,9 +36,9 @@ body {
 }
 
 .menu ul {
-display: flex;
-flex-wrap: wrap;
-padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
 }
 
 .menu li a {
@@ -39,11 +47,11 @@ padding: 10px;
   margin-right: 10px;
   color: #222;
   text-decoration: none;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 0.875rem;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
 }
 
 .grid-section {
@@ -58,7 +66,7 @@ padding: 10px;
 }
 
 .titulo {
-  font-family: 'Playfair Display', georgia;
+  font-family: "Playfair Display", georgia;
   font-size: 6rem;
   line-height: 1;
   font-weight: 400;
@@ -70,13 +78,13 @@ padding: 10px;
   font-size: monospace;
   font-size: 1rem;
   text-transform: uppercase;
-  letter-spacing: .1em;
+  letter-spacing: 0.1em;
   margin-bottom: 1rem;
-  color: #E54;
+  color: #e54;
 }
 
 .animais h2::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 40px;
   height: 10px;
@@ -127,15 +135,15 @@ padding: 10px;
 }
 
 .faq-lista dt {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-weight: bold;
   margin-top: 2rem;
-  margin-bottom: .5rem;
-  color: #E54;
+  margin-bottom: 0.5rem;
+  color: #e54;
 }
 
 .faq-lista dt::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 20px;
   height: 10px;
@@ -145,7 +153,7 @@ padding: 10px;
 
 .faq-lista dd {
   font-family: Helvetica, sans-serif;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   margin-left: 30px;
 }
 
@@ -163,7 +171,7 @@ padding: 10px;
 }
 
 .dados li::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 20px;
   height: 10px;
@@ -174,12 +182,12 @@ padding: 10px;
 .copy {
   grid-column: 3/5;
   margin-bottom: 2rem;
-  background:#fb5;
+  background: #fb5;
 }
 
 .copy p {
   padding: 20px;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
 }
 
@@ -187,7 +195,9 @@ padding: 10px;
   body {
     grid-template-columns: 1fr;
   }
-  .menu, .grid-section, .copy {
+  .menu,
+  .grid-section,
+  .copy {
     grid-column: 1;
   }
   .grid-section {
@@ -197,7 +207,9 @@ padding: 10px;
   .animais-lista {
     grid-column: 1;
   }
-  .faq-lista, .dados, .mapa {
+  .faq-lista,
+  .dados,
+  .mapa {
     grid-column: 1 / 3;
   }
   .grid-section h1 {
@@ -211,14 +223,13 @@ padding: 10px;
   }
 }
 
-
 .js .js-tabcontent section {
-display: none;
+  display: none;
 }
 
 .js-tabcontent section.ativo {
   display: block !important;
-  animation: show .9s forwards;
+  animation: show 0.9s forwards;
 }
 
 @keyframes show {
@@ -229,5 +240,34 @@ display: none;
   to {
     opacity: 1;
     transform: translate3d(0, 0, 0);
+  }
+}
+
+.js-accordion dd {
+  display: none;
+}
+
+.js-accordion dt::after {
+  content: "⬎";
+  margin-left: 10px;
+}
+
+.js-accordion dt.ativo::after {
+  content: "⬏";
+}
+
+.js-accordion dd.ativo {
+  display: block;
+  animation: slideDown .5s forwards;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    max-height: 200px;
+    opacity: 1;
   }
 }
