--- a/Javascript-Curso/parte 2 dom/site3-date-object/css/geral.css
+++ b/Javascript-Curso/parte 2 dom/site3-date-object/css/geral.css
@@ -292,3 +292,18 @@ body {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
+
+[data-semana]::after {
+  display: inline-block;
+  content: '';
+  width: 6px;
+  height: 6px;
+  background: #e54;
+  border-radius: 50%;
+  margin-left: 4px;
+  border: 2px solid black;
+}
+
+[data-semana].aberto::after {
+  background: rgb(28, 241, 28);
+}
