--- a/Javascript-Curso/button-creator/style.css
+++ b/Javascript-Curso/button-creator/style.css
@@ -27,7 +27,7 @@ grid-template-columns: 200px 1fr;
   background: #eee;
   padding: 1rem;
   border-radius: 4px;
-  box-shadow: 2px 2px 2px 0 rgba(0,0,0,.1);
+  box-shadow: 2px 2px 2px 0 rgba(0,0,0,.1);0
 }
 
 .css {
